생태 샘플 추가

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
       "displayName": "TestFlowManager",
       "description": "TestFlowManager",
       "path": "Samples~/TestFlowManager"
+    },
+    {
+      "displayName": "EcologyContent",
+      "description": "개인 생태 콘텐츠 FlowManager",
+      "path": "Samples~/EcologyContent"
     }
   ]
 }
